--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
@@ -1,5 +1,5 @@
 ﻿@*<div id="addPrivateEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>*@
-<section class="lobby-overview">
+<div class="lobby-overview">
 	<div class="inline-block" style="width: 51%;position:relative;top:-1px;">
 		<div class="overview-events-list-container">
 			<div class="dashboard-title">Nadchodzące publiczne wydarzenia</div>
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="inline-block" style="width: 49%; float: right; color: white;position:relative;top:-1px;">
-		<div class="overview-events-list-container" style="background: #fdfdfd;">
+		<div class="overview-events-list-container">
 			<div class="dashboard-title">Mój kalendarz</div>
 
 			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">dzisiaj</h4>
@@ -41,4 +41,4 @@
 
 		</div>
 	</div>
-</section>
+</div>
