--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
@@ -1,6 +1,6 @@
 ﻿<header id="lobbyHeader">
 	<div id="lobbyLogo">
-		<img src="~/Images/Logo/kkLogo.png" alt="logo" style="position: relative; top: 4px;" />
+		<img src="~/Images/Logo/kalendarz-kariery-logo.png" alt="logo" style="position: relative; top: 1px;" />
 	</div>
 </header>
 <section id="lobbyQuoteSection">
