--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventCountTiles.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventCountTiles.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="events-menu-container" data-bind="with: $root.lobbyPage.upcomingEventsPart">
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 7, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 7, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item inne-border-tab"></div>
 		<div class="menu-item" data-eventkind="7">
 			<span>Inne</span>
@@ -9,11 +9,10 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 2, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 2, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item lekcje-border-tab"></div>
 		<div class="menu-item" data-eventkind="2">
 			<span>Lekcje</span>
-
 		</div>
 		<div class="menu-item-number-container">
 			<div class="menu-item-number-upcoming" data-bind="text: publicEventTreeCountBasedOnEventKindVM[2].upcoming() != 0 ? publicEventTreeCountBasedOnEventKindVM[2].upcoming() : '-'"></div>
@@ -21,7 +20,7 @@
 	</div>
 
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 1, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 1, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item wydarzenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="1">
 			<span>Wydarzenia</span>
@@ -31,7 +30,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 6, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 6, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item spotkania-border-tab"></div>
 		<div class="menu-item" data-eventkind="6">
 			<span>Spotkania</span>
@@ -42,7 +41,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 3, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 3, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item zajecia-border-tab"></div>
 		<div class="menu-item" data-eventkind="3">
 			<span>Zajęcia</span>
@@ -52,7 +51,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 4, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 4, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item szkolenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="4">
 			<span>Szkolenia</span>
@@ -63,7 +62,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 5, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventTileClick( $element, 5, eventListVM.getSelectedEvents(), eventListVM ) }">
 		<div class="border-item kursy-border-tab"></div>
 		<div class="menu-item" data-eventkind="5">
 			<span>Kursy</span>
