--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
@@ -1,4 +1,8 @@
-﻿<div data-bind="with: $root.lobbyPage.upcomingEventsPart.eventListVM" class="display-events-overview-body">
+﻿<header class="display-events-overview-header">
+	<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
+	<span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
+</header>
+<div data-bind="with: $root.lobbyPage.upcomingEventsPart.eventListVM" class="display-events-overview-body">
 	<div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: menuItems.publicEvents.showOld() }, click: function () { menuItems.publicEvents.showOld( !menuItems.publicEvents.showOld() ), $root.showSelectedEvents( menuItems.publicEvents.selectedEvents, 'old', selectedEventKindValues ) }">
 		<div class="legend-text">
 			<span>stare</span>
