--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -7,7 +7,7 @@
 
 <section class="dz-row day-plan-part">
 	<header class="section-title">Plan dnia</header>
-	@Html.Partial("_DayPlanPart");
+	@Html.Partial("_DayPlanPart")
 </section>
 
 <section class="dz-row">
