--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -4,9 +4,7 @@
 
   <div class="popupbox-header">
   <span class="popupbox-header-title">Dodaj do kalendarza</span>
-    <span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAddNewEventPopupOnClick">
-      x
-    </span>
+    <i class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAddNewEventPopupOnClick"></i>
   </div>
 
   <div class="popupbox-body">
