--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -3,7 +3,7 @@
 		<div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 			<div class="rg-label expand-label">[ZWIŃ]</div>
 			<div class="event-list-item-left">
-				<div class="event-kind-tag" data-bind="style: { color: kind.headerColor }, text: kind.name"></div>
+				<div class="event-kind-tag inline-block" data-bind="style: { color: kind.headerColor }, text: kind.name"></div>
 				<div class="list-item-date">
 					<div data-bind="html: startDate.displayFullDate_EnlargeDay()"></div>
 					<div data-bind="text: startDate.displayFullTime()"></div>
