--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Kalendarz Kariery</title>
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )" />
+	<link href="/Content/MaterialDesignIcons/materialdesignicons.min.css" rel="stylesheet">
 	@Styles.Render( "~/Content/css" )
 </head>
 <body>
