--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DayPlanPart.cshtml
@@ -1,96 +1,23 @@
-﻿<section id="calendarDayDetailsContainer" data-bind="with: $root.detailsPage.dayPlanPart.dayPlanVM">
-	<div class="day-display-date-container">
-		<span class="display-date-small" data-bind="text: date.getDayName()"></span>
-		<span data-bind="text: date.day()"></span>
-		<span data-bind="text: date.getMonthName()"></span>
-		<span class="display-date-small" data-bind="text: date.year()"></span>
-	</div>
+﻿<section id="calendarDayDetailsContainer">
+	@Html.Partial( "_DayPlanPart.DayPlanTable" )
 
-	<div id="detailsDayTable">
-		<div class="details-day-table-head">
-			<div>7<span class="small-minutes">00</span></div>
-			<div class="sm-hide">8<span class="small-minutes">00</span></div>
-			<div>9<span class="small-minutes">00</span></div>
-			<div class="sm-hide">10<span class="small-minutes">00</span></div>
-			<div>11<span class="small-minutes">00</span></div>
-			<div class="sm-hide">12<span class="small-minutes">00</span></div>
-			<div>13<span class="small-minutes">00</span></div>
-			<div class="sm-hide">14<span class="small-minutes">00</span></div>
-			<div>15<span class="small-minutes">00</span></div>
-			<div class="sm-hide">16<span class="small-minutes">00</span></div>
-			<div>17<span class="small-minutes">00</span></div>
-			<div class="sm-hide">18<span class="small-minutes">00</span></div>
-			<div>19<span class="small-minutes">00</span></div>
-			<div class="sm-hide">20<span class="small-minutes">00</span></div>
-			<div class="sm-hide" style="position: absolute; right: 26px; width: 12px;"><span>21</span><span class="small-minutes">00</span></div>
+	<div id="detailsEventsAndNotesContainer" data-bind="with: $root.detailsPage.dayPlanPart.eventListVM">
+		<div class="inline-block" style="width: 49%;">
+			<div style="margin-bottom: 10px; height: 40px; color: #909090;">Wydarzenia</div>
+			<ul id="detailsEventBlockList" data-bind="foreach: events()">
+				@Html.Partial( "_EventListItem", new ViewDataDictionary { { "page", "details" } } )
+			</ul>
 		</div>
-		<div class="details-day-table-body">
-			<div class="details-day-table-cell hour-cell-7">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-8">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-9">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-10">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-11">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-12">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-13">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-14">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-15">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-16">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-17">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-18">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-19">
-				<div class="hour-line"></div>
-			</div>
-
-			<div class="details-day-table-cell hour-cell-20">
-				<div class="hour-line"></div>
-				<div class="hour-line-21"></div>
-			</div>
+		<div class="inline-block" style="width: 49%; float: right;" data-bind="with: $root.detailsPage.dayPlanPart.noteListVM">
+			<div style="margin-bottom: 10px; height: 40px; color: #909090;">
+				Notatki
+		<div style="float: right;">
+			<i class="mdi mdi-library-plus md-icon-rg md-icon-hover" data-bind="click: function () { isAddNoteSectionOpen( true ); $('#noteTxtArea').focus() }"></i>
 		</div>
-	</div>
-
-	<div id="detailsEventsAndNotesContainer">
-		<ul id="detailsEventBlockList" data-bind="foreach: events()">
-			@Html.Partial( "_EventListItem", new ViewDataDictionary { { "page", "details" } } )
-		</ul>
-		<div id="notesContainer">
-			@Html.Partial( "_DetailsNotesSummary" )
-
+			</div>
+			<div id="notesContainer">
+				@Html.Partial( "_DayPlanPart.NotesList" )
+			</div>
 		</div>
 	</div>
 </section>
